<?xml version="1.0"?>
<package format="2">
  <name>campus_tour</name>
  <version>0.0.0</version>
  <description>The campus tour multi-agent system package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies required during the build and execution -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>


  <export>
    <!-- Other tools can be declared here -->
  </export>
</package>
